changes to syles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Calculator</title>
 </head>
 <body>
@@ -91,7 +92,7 @@
     </div>
     <footer>
         <div class="credit">
-            <H4>by Omar Salameh</H4>
+            <H4>By Omar Salameh</H4>
         </div>
     </footer>
 
