added the balls effect

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
+    <canvas></canvas>
     <header>
     <div class="title">
         <h1>Calculator</h1>
@@ -96,7 +97,7 @@
         </div>
     </footer>
 
-    
+    <script src="canvas_app.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
