fixed interface and added on-off button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas class="canvas-off"></canvas>
     <header>
     <div class="title">
         <h1>Calculator</h1>
@@ -29,6 +29,9 @@
                     <h3>0</h3>
                 </div> 
             </div>
+            <div class="btn canvas on">
+                <button><h2>ON</h2></button>
+            </div>
             <div class="btn action">
                 <button><h2>AC</h2></button>
             </div>
@@ -36,31 +39,19 @@
                 <button><h2>CE</h2></button>
             </div>
             <div class="btn action">
-                <button><h2>+</h2></button>
-            </div>
-            <div class="btn action">
-                <button><h2>-</h2></button>
-            </div>
-            <div class="btn action">
-                <button><h2>NEG</h2></button>
-            </div>
-            <div class="btn action">
-                <button><h2>.</h2></button>
-            </div>
-            <div class="btn action">
                 <button><h2>/</h2></button>
+            </div>
+            <div class="btn number">
+                <button><h2>7</h2></button>
+            </div>
+            <div class="btn number">
+                <button><h2>8</h2></button>
+            </div>
+            <div class="btn number">
+                <button><h2>9</h2></button>
             </div>
             <div class="btn action">
                 <button><h2>x</h2></button>
-            </div>
-            <div class="btn number">
-                <button><h2>1</h2></button>
-            </div>
-            <div class="btn number">
-                <button><h2>2</h2></button>
-            </div>
-            <div class="btn number">
-                <button><h2>3</h2></button>
             </div>
             <div class="btn number">
                 <button><h2>4</h2></button>
@@ -71,22 +62,33 @@
             <div class="btn number">
                 <button><h2>6</h2></button>
             </div>
-            <div class="btn number">
-                <button><h2>7</h2></button>
+            <div class="btn action">
+                <button><h2>-</h2></button>
             </div>
             <div class="btn number">
-                <button><h2>8</h2></button>
+                <button><h2>1</h2></button>
             </div>
-            <div></div>
             <div class="btn number">
-                <button><h2>9</h2></button>
+                <button><h2>2</h2></button>
+            </div>
+            <div class="btn number">
+                <button><h2>3</h2></button>
+            </div>
+            <div class="btn action">
+                <button><h2>+</h2></button>
             </div>
             <div class="btn number">
                 <button><h2>0</h2></button>
             </div>
             <div class="btn action">
+                <button><h2>.</h2></button>
+            </div>
+            <div class="btn action">
+                <button><h2>=</h2></button>
+            </div>
+            <div class="btn action">
                 <button>
-                    <h2>=</h2>
+                    <h2>NEG</h2>
                 </button>
             </div>
         </div>
